--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-xml-bodyparser": "^0.3.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.0",
@@ -29,6 +30,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.15",
+    "@types/express-xml-bodyparser": "^0.3.2",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.14.6",
     "typescript": "^4.9.4"
